Refactor 마무리